stream output and structural optimization

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ MULTIMODAL_DOMAIN=api-ai.vivo.com.cn
 
 VIVOGPT_API_URI='/vivogpt/completions'
 VIVOGPT_API_DOMAIN='api-ai.vivo.com.cn'
+VIVOGPT_API_STREAM_URI='/vivogpt/completions/stream'
 
 WEB_SEARCH_API_KEY=
 WEB_SEARCH_URL=
